Added PasswordChangeRequest and usernameChange
