# Backend/labfastorder-openapi.yaml
@@ -485,6 +485,112 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/MessageResponse"
+  /api/user/all:
+    get:
+      summary: "GET api/user/all"
+      operationId: "getAllUsers"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/User"
+  /api/user/delete/{id}:
+    delete:
+      summary: "DELETE api/user/delete/{id}"
+      operationId: "deleteUser"
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "object"
+  /api/user/changePassword/{id}:
+    put:
+      summary: "PUT api/user/changePassword/{id}"
+      operationId: "changePassword"
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PasswordChange"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "object"
+  /api/user/changeRole/{id}:
+    put:
+      summary: "PUT api/user/changeRole/{id}"
+      operationId: "changeRole"
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: "string"
+              enum:
+                - "ROLE_USER"
+                - "ROLE_ADMIN"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "object"
+  /api/user/changeUsername/{id}:
+    put:
+      summary: "PUT api/user/changeUsername/{id}"
+      operationId: "changeUsername"
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: "string"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "object"
 components:
   schemas:
     ProductCategoryDTO:
@@ -727,4 +833,38 @@ components:
       type: "object"
       properties:
         message:
+          type: "string"
+    User:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        username:
+          type: "string"
+        email:
+          type: "string"
+        password:
+          type: "string"
+        roles:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/Role"
+    Role:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int32"
+        name:
+          type: "string"
+          enum:
+            - "ROLE_USER"
+            - "ROLE_ADMIN"
+    PasswordChange:
+      type: "object"
+      properties:
+        oldPassword:
+          type: "string"
+        newPassword:
           type: "string"
